force-app/main/default/objects/RAM__c/RAM__c.object-meta.xml
<CustomObject>
    <label>RAM</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RAM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>