force-app/main/default/objects/RAM__c/fields/Next_Repair_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Next_Repair_Schedule__c</fullName>
    <label>Next Repair Schedule</label>
    <type>Date</type>
</CustomField>