force-app/main/default/objects/RAM__c/fields/Truck_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Truck_Fleet__c</fullName>
    <label>Truck/Fleet</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>