force-app/main/default/objects/RAM__c/recordTypes/Sudden_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Sudden_Maintenance</fullName>
    <active>true</active>
    <label>Sudden Maintenance</label>
</RecordType>